<resources>

    <!-- App-name: -->
    <string name="app_name">Noadpad</string>

    <!-- Credits/info string: -->
    <string name="credits">
        
        Thanks for trying out Noadpad! :-) \n\n
        
        For more info:  \n\n
        
        Contact me: luxlunarislabs@gmail.com  \n\n
        Repo: https://github.com/aiman-al-masoud/noadpad \n\n
        Quick Start Guide: https://github.com/aiman-al-masoud/noadpad/wiki/Quick-Start-Guide  \n\n
        License: https://github.com/aiman-al-masoud/noadpad/blob/master/LICENSE.md  \n\n
    </string>

    <!-- All menu and/or prompt strings: -->
    <string name="search_icon_title">Search</string>
    <string name="new_page_icon_title">New Page</string>
    <string name="edit_icon_title">Edit</string>
    <string name="settings_icon_title">Settings</string>
    <string name="import_image_icon_title">Import Image</string>
    <string name="switch_edit_mode_icon_title">Switch Edit Mode</string>
    <string name="shrink_text_icon_title">Shrink Text</string>
    <string name="enlarge_text_icon_title">Enlarge Text</string>
    <string name="plain_style_icon_title">Plain</string>
    <string name="bold_style_icon_title">Bold</string>
    <string name="underlined_style_icon_title">Underlined</string>
    <string name="italics_style_icon_title">Italics</string>
    <string name="edit_options_delete_title">Delete</string>
    <string name="edit_options_compact_title">Compact</string>
    <string name="credits_and_more_info_title"><![CDATA[Credits & more Info]]></string>
    <string name="saved_page_changed_toast">Saved</string>
    <string name="occurrences_found_toast">Volume Up/Down to navigate. Occurrences found: </string>
    <string name="auto_launch_to_blank_setting">Auto-launch the app to a blank page.</string>
    <string name="select_app_theme_setting">Select the app-theme: </string>
    <string name="import_pages_title">Import pages</string>
    <string name="export_pages_title">Export pages</string>
    <string name="pick_file_title">Pick file</string>
    <string name="confirm_picking_file_title">Confirm</string>
    <string name="total_data_export_title">Export your data</string>
    <string name="info_fragment_got_it">Got it!</string>
    <string name="editing_html_mode_ON">you\'re editing html source!</string>
    <string name="editing_html_mode_OFF">you\'re back in normal mode.</string>
    <string name="style_menu_title">Style</string>
    <string name="selected_word">Selected: </string>
    <string name="load_more_pages">Load More Pages</string>
    <string name="settings_activity_title">Settings</string>
    <string name="reader_activity_title_normal">Editor</string>
    <string name="reader_activity_title_html_editor">Html Editor</string>
    <string name="restore">Restore</string>
    <string name="recycle_bin_title">Recycle Bin</string>
    <string name="recycle_bin">Recycle-Bin</string>
    <string name="empty_recycle_bin">Empty Recycle-Bin</string>
    <string name="restore_recycle_bin">Restore Recycle-Bin</string>
    <string name="doodle_activity_title">Doodle</string>
    <string name="done">Done</string>
    <string name="add_doodle">Add Doodle</string>
    <string name="sure_u_empty_recycle_bin">Empty Recycle-Bin?\nThis operation is NOT undoable.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="export">Export</string>
    <string name="undo_stroke">Undo</string>
    <string name="color_palette">Color Palette</string>
    <string name="exit_doodle_no_save">Exit? Your (gorgeous) drawing will be lost!</string>
    <string name="image_imported">Image imported!</string>
    <string name="pick_width">Brush Size</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="record_audio">Record Audio</string>
    <string name="add_link">Add Link</string>
    <string name="input_link_prompt">Input a link to a website:</string>
    <string name="advanced_opts">Advanced Opts.</string>
    <string name="import_audio_clip">Import Audio Clip</string>
    <string name="take_photo">Take Photo</string>
    <string name="no_camera_app">Oops! Couldn\'t find any camera app!</string>


</resources>