<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/undo"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/undo_stroke"
        app:showAsAction="always" />

    <item
        android:id="@+id/pick_color"
        android:icon="@drawable/palette"
        android:title="@string/color_palette"
        app:showAsAction="always" />


    <item
        android:id="@+id/pick_width"
        android:icon="@drawable/brush"
        android:title="@string/pick_width"
        app:showAsAction="always" />





    <item
        android:id="@+id/done_doodling"
        android:icon="@drawable/green_tick"
        android:title="@string/done"
        app:showAsAction="always" />










</menu>